# Simp-Cli

./: README.md  meson.build
include/simp_cli/: callback.hpp  simp_cli.hpp
src/: main.cpp
src/simp_cli/: callback.cpp  simp_cli.cpp
